kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: AUTH_SERVICE_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SERVICE_URL
                  name: env
            - name: CREDENTIALS_DB
              valueFrom:
                configMapKeyRef:
                  key: CREDENTIALS_DB
                  name: env
            - name: FILE_SYSTEM_URL
              valueFrom:
                configMapKeyRef:
                  key: FILE_SYSTEM_URL
                  name: env
            - name: MEDIA_DB
              valueFrom:
                configMapKeyRef:
                  key: MEDIA_DB
                  name: env
            - name: MYSQL_HOST
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_HOST
                  name: env
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: env
            - name: SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: SECRET_KEY
                  name: env
          image: mysql
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
          name: database
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
            - mountPath: /docker-entrypoint-initdb.d
              name: db-cm1
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
        - configMap:
            name: db-cm1
          name: db-cm1
