kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # 👈 REQUIRED to bind to NGINX controller
  rules:
  - http:
      paths:
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: upload
            port:
              number: 8080
      - path: /stream
        pathType: Prefix
        backend:
          service:
            name: stream
            port:
              number: 8090
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 5000
